@@ -14,6 +14,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Add printf() like variant to StringBuffer module.
+  common/stringbuffer.c
+  include/stringbuffer.h
+Andreas Kirschbaum 2008-02-07
+
 Change heading of high score command output to match the actual highscore data
 by using <> instead of [] around max grace, hp, and sp.  The reason is that
 when [max x] gets to a client that supports mediaTags, the text is treated
